kubernetes-stack/yamls-pre-chaos/virtualservices/kafka-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-vs
spec:
  hosts:
  - kafka
  http:
  - route:
    - destination:
        host: kafka
        port:
          number: 9092
