kubernetes-stack/yamls-pre-chaos/virtualservices/ms-create-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-create-vs
spec:
  hosts:
  - ms-create
  http:
  - route:
    - destination:
        host: ms-create
        port:
          number: 8086
