kubernetes-stack/yamls-pre-chaos/virtualservices/ms-read-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-read-vs
spec:
  hosts:
  - ms-read
  http:
  - route:
    - destination:
        host: ms-read
        port:
          number: 8088
