kubernetes-stack/yamls-pre-chaos/virtualservices/ms-update-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-update-vs
spec:
  hosts:
  - ms-update
  http:
  - route:
    - destination:
        host: ms-update
        port:
          number: 8089
